jwt configs are added. Services and controllers are added. Dto mappers and request models are used

--- a/PanteonWebAPI/appsettings.json
+++ b/PanteonWebAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "fghfghfghfgjnbvHGWHS464",
+    "Key": "fghfghfghfgjnbvHGWHS464vbcbcvbcvbcvbcvbcvbcb",
     "Issuer": "PanteonServer",
     "Audience": "PanteonReactPort"
   }
