connectionstring is changed,deployment has done

--- a/PanteonWebAPI/appsettings.json
+++ b/PanteonWebAPI/appsettings.json
@@ -10,5 +10,10 @@
     "Key": "fghfghfghfgjnbvHGWHS464vbcbcvbcvbcvbcvbcvbcb",
     "Issuer": "PanteonServer",
     "Audience": "PanteonReactPort"
+  },
+  "ConnectionStrings": {
+    "SqlServer": "Server=tcp:panteonserver.database.windows.net,1433;Initial Catalog=Panteon;Persist Security Info=False;User ID=panteon;Password=Password123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "LocalHost": "Data Source=SENES;Integrated Security=True;Initial Catalog=Pentaon;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+
   }
 }
